--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-flask>=2.3.2
-flask-cors>=3.1.0
-torch>=2.1.0
-torchvision>=0.18.1
-pillow>=10.0.0
-numpy>=1.25.0
-opencv-python>=4.8.1.78
-matplotlib>=3.8.1
-pytorch-grad-cam>=1.4.6
+flask
+flask-cors
+torch
+torchvision
+pillow
+numpy
+opencv-python
+matplotlib
+pytorch-gr.ad-cam
