--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-flask
-flask-cors
-torch
-torchvision>=0.16.2
-pillow
-numpy
-opencv-python
-matplotlib
-pytorch-grad-cam
+torch==2.1.2
+torchvision==0.16.2
+pytorch-grad-cam==1.4.8
+flask==3.0.3
+flask-cors==4.0.0
+numpy==1.26.4
+Pillow==10.4.0
+opencv-python-headless==4.9.0.80
+matplotlib==3.8.4
+gunicorn==21.2.0
